FAD-5461 Fix tag vertical spacing

--- a/src/components/Tag/Tag.module.scss
+++ b/src/components/Tag/Tag.module.scss
@@ -80,12 +80,12 @@
 
 .Content {
   display: inline-block;
-  padding: rem(1) rem(8);
+  padding: rem(2) rem(7) 0;
   border-radius: border-radius(large);
   background: color(gray, 8);
 
   font-size: rem(12);
-  line-height: rem(24);
+  line-height: rem(22);
 
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -94,13 +94,13 @@
 
 .Close, a.Close {
   display: inline-block;
-  padding: rem(1) rem(6);
+  padding: rem(2) rem(6) 0;
   border-radius: 0 border-radius(large) border-radius(large) 0;
   background: color(gray, 8);
 
   color: color(gray, 4);
   font-size: rem(12);
-  line-height: rem(24);
+  line-height: rem(22);
   transition: 0.15s;
 
   &:hover, &:active {
